--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=adv-user
+spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
